Now requiring env before everything else in app.js
